@startuml hw3

class Store{
	Video[] videos
	Rental[] rentals
	Customer[] customer
	int money
	createVideos()
	createCustomers()
	updatePrice()
	trackRentals()
	getVideos()
    getRentals()
    getCustomers()
    getMoney()
	addRental()
	payMoney()
	setVideos()
}

class Customer{
	string name
	string type
	Video[] videos
	rent()
	return()
	getName()
	getype()
	getVideos()
}

note left of Customer::rent
A giant rent function for types
end note

note left of Customer::return
retrun all at a time
end note

Customer <-- "0..3" Video : rent
Store <-- "10" Customer


class Video{
	string name
	string categories
	int price
	getName()
    getCategories()
    getPrice()
    setPrice()
}

Store <-- "20" Video : owns

note Right of Video : Categories including New Release, Drama, \nComedy, Romance, and Horror

class Rental{
	int expireDay
	int rentDay
	Video[] videos
	Customer customer
	bool hasReturned
	int moneyEarned
	getExpireDay()
    getRentDay()
    getVideos()
    getCustomer()
    getHasReturned()
    getMoneyEarned()
	setHasReturned()
}

note Right of Rental : Customers are allowed to rent a video for up to 7 nights

Store <-- Rental
Rental <-- Video
@enduml